Added files via upload

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,2 +1,2 @@
 all:
-	gcc chengine.c board.c attack.c move.c movegen.c makemove.c perft.c misc.c -o chengine
+	gcc chengine.c board.c attack.c move.c movegen.c makemove.c perft.c misc.c eval.c search.c -o chengine
